--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "@tensorflow/tfjs": "^2.4.0",
     "canvas": "^2.6.1",
     "express": "^4.17.1",
-    "gm": "*"
+    "gm": "*",
+    "request": "^2.88.2"
   },
   "devDependencies": {},
   "scripts": {
